--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,6 @@
         "doctrine/doctrine-bundle": ">=1.2"
     },
     "autoload": {
-        "psr-4": { "Catalyst\\DiscriminatorMapBundle": "" }
+        "psr-4": { "Catalyst\\DiscriminatorMapBundle\\": "" }
     }
 }
